@@ -1,3 +1,7 @@
+2008-12-28  Per Bothner  <per@bothner.com>
+
+	* SwitchState.java (finish): Optimize a single 'case 0'.
+
 2008-12-27  Per Bothner  <per@bothner.com>
 
 	Generate StackMapTable attributes.
